--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
+    "@fontsource-variable/karla": "^5.1.0",
     "@fontsource/cormorant-garamond": "^5.1.0",
     "@fontsource/space-mono": "^5.1.1",
     "astro": "^4.16.9",
